--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   package_info_plus: ^4.2.0
   lucide_icons: 0.257.0
   water_drop_nav_bar: ^2.2.2
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
